quick fix width too large

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,7 +30,6 @@
     // Utile au moment du click sur le bouton burger
 .show-navbar .navbar__links {
     width: 100%;
-    overflow: visible;
 }
 
 .navbar__link{
